Fix overflow bug and few styling issues

--- a/client/src/views/Dashboard/Overview/Filter/UGProjectsTasks/styles.scss
+++ b/client/src/views/Dashboard/Overview/Filter/UGProjectsTasks/styles.scss
@@ -1,77 +1,6 @@
 @import '../../../../../stylesheets/base';
 
-$slot-editor-height: 130px;
-
-.message-box {
-    @include background-color($color-foreground);
-    flex-shrink: 0;
-    height: $slot-editor-height;
+.input {
+    padding: 0 $spacing-extra-small;
 }
 
-.day-editor {
-    @include background-color($color-foreground);
-    position: relative;
-    // min-height: $slot-editor-height;
-
-    .day-editor-form {
-        display: flex;
-        flex-direction: column;
-        padding: $spacing-small 0;
-
-        .title {
-            display: flex;
-            justify-content: space-between;
-            margin-bottom: $spacing-small;
-            padding: 0 $spacing-small;
-
-            .action-buttons {
-                display: flex;
-                align-items: flex-start;
-
-                button {
-                    margin-left: $spacing-small;
-                }
-            }
-        }
-
-        .main-form {
-            display: flex;
-            justify-content: space-between;
-
-            .infowrapper {
-                display: flex;
-                align-items: center;
-                flex-grow: 1;
-
-                .startTime,
-                .endTime,
-                .usergroup,
-                .project,
-                .remarks,
-                .task {
-                    margin-left: $spacing-large;
-                }
-                .tag {
-                    margin-left: $spacing-large;
-                }
-
-                .remarks {
-                    flex-grow: 1;
-                }
-            }
-        }
-
-        .bottom {
-            @include background-color($color-foreground);
-            display: flex;
-            flex-shrink: 0;
-            border-top: $width-separator-thin solid $color-separator-alt;
-            padding: $spacing-small;
-
-            .date {
-                padding: $spacing-extra-small $spacing-small;
-                font-family: $font-family-monospace;
-            }
-        }
-    }
-}
