--- a/client/src/views/Dashboard/styles.scss
+++ b/client/src/views/Dashboard/styles.scss
@@ -2,8 +2,14 @@
 
 .dashboard {
     @extend %main-content;
+    display: flex;
+    flex-direction: column;
+    overflow-y: auto;
 
-    .content {
-        margin-top: $spacing-medium;
+    .container {
+        display: flex;
+        flex-direction: column;
+        flex-grow: 1;
+        overflow-y: auto;
     }
 }
